# Workshop3

./: .gitignore  consumer.ipynb  docker-compose.yml  producer.ipynb  pyproject.toml
ml_model/: gbr_model.pkl
notebooks/: 001_years_EDA.ipynb  002_model_metrics.ipynb
src/database/: database_functions.py
src/models/: database_models.py
utils/: years_functions.py
